--- a/.github/workflows/frontend-ci-workflow.yml
+++ b/.github/workflows/frontend-ci-workflow.yml
@@ -59,7 +59,7 @@ jobs:
         run: npm i
       
       - name: Run test
-        run: npm test
+        run: npm run lint -- --fix
 
   build-docker-file-for-fe:
     needs: [build-and-test-eslint, build-and-test-react-script]
