--- a/.github/workflows/frontend-ci-workflow.yml
+++ b/.github/workflows/frontend-ci-workflow.yml
@@ -68,6 +68,9 @@ jobs:
       run:
         working-directory: starter/frontend
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
       - name: build docker file
         run: docker build -t movies-cicd-image .
     
