--- a/.github/workflows/frontend-ci-workflow.yml
+++ b/.github/workflows/frontend-ci-workflow.yml
@@ -6,13 +6,16 @@ on:
 
   push:
     branches: ['main']
-    paths: ['starter/frontend']
+    paths: "frontend/**"
         
 
   # Automatic trigger on pull request events targeting the main branch
   pull_request:
     branches: ['main']
-    paths: ['starter/frontend']
+    paths: "frontend/**"
+
+env:
+  NODE_VERSION: 18.x
 
 # Jobs defined in the workflow
 jobs:
@@ -60,9 +63,9 @@ jobs:
         run: npm i
       
       - name: Run test
-        run: npm test
+        run: npm run test
 
-  build-docker-file-for-fe:
+  build:
     needs: [build-and-test-eslint, build-and-test-react-script]
     runs-on: ubuntu-latest
     defaults:
@@ -72,6 +75,39 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       
-      - name: build docker file
-        run: docker build -t movies-cicd-image .
+      - name: Install dependencies
+        run: |
+          npm install
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+        with:
+          mask-password: 'true'
+
+      - name: Build, Tag, and Push docker image to Amazon ECR
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: movie-frontend
+          IMAGE_TAG: latest
+        run: |
+          aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSER_NAME }}
+          export EXTERNALIP=$(kubectl get svc backend -o=jsonpath='{.status.loadBalancer.ingress[0].hostname}{"\n"}{.status.loadBalancer.ingress[0].ip}')
+          echo $EXTERNALIP
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG --build-arg=REACT_APP_MOVIE_API_URL=http://$EXTERNALIP .
+          docker images
+
+      - name: Cache Docker image
+        uses: actions/cache@v3
+        with:
+          path: ~/docker-cache
+          key: docker-${{ github.sha }}-frontend
+
     
