--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -19,7 +19,7 @@ env:
 
 # Jobs defined in the workflow
 jobs:
-  build-and-test-eslint:
+  lint:
     runs-on: ubuntu-latest
 
     # Only when code in the frontend application changes
@@ -42,7 +42,7 @@ jobs:
       - name: Run test eslint
         run: npm run lint -- --fix
 
-  build-and-test-react-script:
+  test:
     runs-on: ubuntu-latest
 
     # Only when code in the frontend application changes
@@ -66,7 +66,7 @@ jobs:
         run: npm run test
 
   build:
-    needs: [build-and-test-eslint, build-and-test-react-script]
+    needs: [lint, test]
     runs-on: ubuntu-latest
     defaults:
       run:
