--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -4,16 +4,11 @@ on:
   # Manual trigger using the workflow_dispatch event
   workflow_dispatch:
 
+  # Automatic trigger on push request events targeting the main branch
   push:
     branches: ['main']
     paths: "frontend/**"
         
-
-  # Automatic trigger on pull request events targeting the main branch
-  pull_request:
-    branches: ['main']
-    paths: "frontend/**"
-
 env:
   NODE_VERSION: 18.x
 
